# Ray-Tracer

./: CMakeLists.txt  README.md
raytrace/: Image.h  Texture.cpp  Texture.h  Triangle.cpp  Triangle.h  camera.h  imageplane.h  main.cpp  sphere.h
